@startuml

title __MEMBERSDECORATOR's Class Diagram__\n

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.BasicDiscount {
          + BasicDiscount()
          + discountRate()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      abstract class MembersDecorator.DiscountDecorator {
          {abstract} + getMemberType()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.HalfPrice {
          + HalfPrice()
          + discountRate()
          + getMemberType()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.LoyalDiscount {
          + LoyalDiscount()
          + discountRate()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      abstract class MembersDecorator.MemberDiscount {
          ~ MemberType : String
          {abstract} + discountRate()
          + getMemberType()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.MemberDiscountDriver {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.OapDiscount {
          + OapDiscount()
          + discountRate()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.SpringClearance {
          + SpringClearance()
          + discountRate()
          + getMemberType()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.StudentDiscount {
          + StudentDiscount()
          + discountRate()
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.SummerSale {
          + SummerSale()
          + discountRate()
          + getMemberType()
      }
    }
  }
  

  MembersDecorator.BasicDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.DiscountDecorator -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.DiscountDecorator o-- MembersDecorator.MemberDiscount : memberDiscount
  MembersDecorator.HalfPrice -up-|> MembersDecorator.DiscountDecorator
  MembersDecorator.LoyalDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.OapDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.SpringClearance -up-|> MembersDecorator.DiscountDecorator
  MembersDecorator.StudentDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.SummerSale -up-|> MembersDecorator.DiscountDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
